Nuke Stream usage.